<package>
  <name>hector_move_base_msgs</name>
  <version>0.1.0</version>
  <description>Holds the relevant messages for the hector_move_base package</description>
  
  <author email="fkunz@sim.tu-darmstadt.de">Florian Kunz</author>
  <author email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</author>
  
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_move_base_msgs</url>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>

  <export>
  </export>

</package>