<package>
  <name>monstertruck_msgs</name>
  <version>0.1.0</version>
  <description>monstertruck_msgs</description>
  
  <author email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</author>
  
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/monstertruck_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <export>
  </export>

</package>